--- a/lib/web/mage/gallery/module/_variables.less
+++ b/lib/web/mage/gallery/module/_variables.less
@@ -9,5 +9,5 @@
 @fotorama-inner-box-shadow: 3px;
 @fotorama-spinner-size: 64px;
 @fotorama-thumb-arrow: 30px;
-@fotorama_close_size: 30px;
+@fotorama_close_button: 80px;
 @size-fotorama-block: 80px;
