--- a/app/code/Magento/Bundle/view/frontend/templates/catalog/product/view/type/bundle/option/radio.phtml
+++ b/app/code/Magento/Bundle/view/frontend/templates/catalog/product/view/type/bundle/option/radio.phtml
@@ -32,6 +32,7 @@
                                class="radio product bundle option"
                                id="bundle-option-<?php /* @escapeNotVerified */ echo $_option->getId() ?>"
                                name="bundle_option[<?php /* @escapeNotVerified */ echo $_option->getId() ?>]"
+                               data-selector="bundle_option[<?php /* @escapeNotVerified */ echo $_option->getId() ?>]"
                                <?php echo ($_default && $_default->isSalable())?'':' checked="checked" ' ?>
                                value=""/>
                         <label class="label" for="bundle-option-<?php /* @escapeNotVerified */ echo $_option->getId() ?>">
@@ -46,6 +47,7 @@
                                id="bundle-option-<?php /* @escapeNotVerified */ echo $_option->getId() ?>-<?php /* @escapeNotVerified */ echo $_selection->getSelectionId() ?>"
                                <?php if ($_option->getRequired()) echo 'data-validate="{\'validate-one-required-by-name\':true}"'?>
                                name="bundle_option[<?php /* @escapeNotVerified */ echo $_option->getId() ?>]"
+                               data-selector="bundle_option[<?php /* @escapeNotVerified */ echo $_option->getId() ?>]"
                                <?php if ($block->isSelected($_selection)) echo ' checked="checked"' ?>
                                <?php if (!$_selection->isSaleable()) echo ' disabled="disabled"' ?>
                                value="<?php /* @escapeNotVerified */ echo $_selection->getSelectionId() ?>"/>
@@ -67,6 +69,7 @@
                            class="input-text qty<?php if (!$_canChangeQty) echo ' qty-disabled' ?>"
                            type="number"
                            name="bundle_option_qty[<?php /* @escapeNotVerified */ echo $_option->getId() ?>]"
+                           data-selector="bundle_option_qty[<?php /* @escapeNotVerified */ echo $_option->getId() ?>]"
                            value="<?php /* @escapeNotVerified */ echo $_defaultQty ?>"/>
                 </div>
             </div>
