--- a/app/code/Magento/Swatches/view/frontend/templates/product/view/renderer.phtml
+++ b/app/code/Magento/Swatches/view/frontend/templates/product/view/renderer.phtml
@@ -13,9 +13,11 @@
         "[data-role=swatch-options]": {
             "Magento_Swatches/js/swatch-renderer": {
                 "jsonConfig": <?php /* @escapeNotVerified */ echo $swatchOptions = $block->getJsonConfig(); ?>,
-                "jsonSwatchConfig": <?php /* @escapeNotVerified */ echo $swatchOptions = $block->getJsonSwatchConfig(); ?>,
+                "jsonSwatchConfig": <?php /* @escapeNotVerified */
+                    echo $swatchOptions = $block->getJsonSwatchConfig(); ?>,
                 "mediaCallback": "<?php /* @escapeNotVerified */ echo $block->getMediaCallback() ?>",
-                "onlyMainImg": <?php /* @escapeNotVerified */ echo $block->getVar('change_only_base_image', 'Magento_Swatches') ?: 'false'; ?>
+                "onlyMainImg": <?php /* @escapeNotVerified */ echo $block->getVar('change_only_base_image',
+                    'Magento_Swatches') ?: 'false'; ?>
             }
         }
     }
