JS-372: [Full-screen mode] Left and right side of image visible while video player is loading
- Hide close button in fullscreen

--- a/lib/web/mage/gallery/module/_fullscreen.less
+++ b/lib/web/mage/gallery/module/_fullscreen.less
@@ -49,6 +49,9 @@
             display: none;
         }
     }
+    .fotorama__video-close {
+        display: none;
+    }
 }
 
 .fotorama--fullscreen .fotorama__loaded--full {
