MAGETWO-47284: Align grouped fields on category edit form

--- a/app/design/adminhtml/Magento/backend/Magento_VisualMerchandiser/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_VisualMerchandiser/web/css/source/_module.less
@@ -357,6 +357,7 @@
         }
 
         .actions-switch-checkbox {
+            opacity: 0;
             position: absolute;
             z-index: -1;
         }
