MAGETWO-47096: Display saved credit card in admin
 - Fixed copyrights

--- a/app/code/Magento/Vault/view/adminhtml/templates/form/vault.phtml
+++ b/app/code/Magento/Vault/view/adminhtml/templates/form/vault.phtml
@@ -14,6 +14,6 @@ $code = $block->escapeHtml($block->getMethodCode());
           style="display:none"
               >
     <input type="hidden" name="payment[payment_method_nonce]" id="<?php /* @noEscape */ echo $code; ?>_nonce" value="" />
-    <input type="hidden" name="payment[method]" value="<?php echo $block->getProviderMethodCode();?>">
+    <input type="hidden" name="payment[method]" value="<?php echo $block->escapeHtml($block->getProviderMethodCode()); ?>">
     <?php echo $block->getChildHtml(); ?>
 </fieldset>
