--- a/app/code/Magento/Vault/view/adminhtml/templates/form/vault.phtml
+++ b/app/code/Magento/Vault/view/adminhtml/templates/form/vault.phtml
@@ -9,11 +9,14 @@
 /** @var Magento\Vault\Block\Form $block */
 $code = $block->escapeHtml($block->getMethodCode());
 ?>
-<fieldset class="admin__fieldset payment-method"
+<fieldset data-mage-init='{
+        "Magento_Vault/js/vault": {
+            "code": "<?php /* @noEscape */ echo $code; ?>"
+        }
+    }' class="admin__fieldset payment-method"
           id="payment_form_<?php /* @noEscape */ echo $code; ?>"
           style="display:none"
               >
     <input type="hidden" name="payment[payment_method_nonce]" id="<?php /* @noEscape */ echo $code; ?>_nonce" value="" />
-    <input type="hidden" name="payment[method]" value="<?php echo $block->escapeHtml($block->getProviderMethodCode()); ?>">
     <?php echo $block->getChildHtml(); ?>
 </fieldset>
