--- a/app/code/Magento/BraintreeTwo/view/adminhtml/templates/form/cc.phtml
+++ b/app/code/Magento/BraintreeTwo/view/adminhtml/templates/form/cc.phtml
@@ -84,7 +84,7 @@ $ccType = $block->getInfoData('cc_type');
                    name="payment[is_active_payment_token_enabler]"
                    class="checkbox-inline"/>
             <label class="label" for="<?php /* @noEscape */ echo $code; ?>_vault">
-                <span><?php echo $block->escapeHtml('Save credit card info for future use.'); ?></span>
+                <span><?php echo $block->escapeHtml('Save for later use.'); ?></span>
             </label>
         </div>
     <?php endif; ?>
