--- a/app/code/Magento/CatalogSearch/view/frontend/layout/default.xml
+++ b/app/code/Magento/CatalogSearch/view/frontend/layout/default.xml
@@ -8,10 +8,10 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="top.search">
-            <block class="Magento\Framework\View\Element\Template" name="advanced-search-link" template="Magento_CatalogSearch::advanced/link.phtml" />
+            <block class="Magento\Framework\View\Element\Template" name="advanced-search-link" template="Magento_CatalogSearch::advanced/link.phtml" ifconfig="catalog/search/show_advanced_search_link" />
         </referenceBlock>
         <referenceBlock name="footer_links">
-            <block class="Magento\Framework\View\Element\Html\Link\Current" name="catalog-search-advanced-link">
+            <block class="Magento\Framework\View\Element\Html\Link\Current" name="catalog-search-advanced-link" ifconfig="catalog/search/show_advanced_search_link">
                 <arguments>
                     <argument name="label" xsi:type="string" translate="true">Advanced Search</argument>
                     <argument name="path" xsi:type="string">catalogsearch/advanced</argument>
