Fixed #18858 Left Side Back End Menu Design fix.

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
@@ -273,7 +273,7 @@
             > .submenu {
                 transform: translateX(0);
                 visibility: visible;
-                z-index: 698;
+                z-index: @submenu__z-index;
                 overflow-x: scroll;
                 min-height: 98.65%;
                 left: 0;
@@ -282,7 +282,7 @@
                 min-width: 100%;
                 display: block;
                 float: left;
-                max-width: 1640px;
+                max-width: 1440px;
             }
         }
     }
