Fixed 18918 Asterisk sign display twice.

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -249,8 +249,12 @@
                 line-height: 1;
                 margin-left: 10px;
                 margin-top: .2rem;
-                position: absolute;
+                position: inherit;
                 z-index: 1;
+                margin-left: -10px;
+                right: -17px;
+                top: 3px;
+
             }
         }
     }
