--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -59,11 +59,7 @@
 }
 
 .abs-field-no-label {
-    /**
-     * @codingStandardsIgnoreStart
-     */
     #mix-grid .return_length(@field-label-grid__column, @field-grid__columns, '+');
-    //@codingStandardsIgnoreEnd
     margin-left: @_length;
 }
 
@@ -170,13 +166,6 @@
     .admin__control-text,
     .admin__control-textarea {
         width: 100%;
-        &.disabled {
-            background-color: #e9e9e9;
-            border-color: #adadad;
-            color: #303030;
-            cursor: not-allowed;
-            opacity: .5;
-        }
     }
 }
 
@@ -194,12 +183,9 @@
 
 .admin__field-label {
     color: @field-label__color;
+    cursor: pointer;
     margin: 0;
     text-align: right;
-
-    label {
-        cursor: pointer;
-    }
 
     + br {
         display: none;
@@ -221,7 +207,7 @@
             overflow: hidden;
         }
 
-        label {
+        span {
             display: inline-block;
             line-height: @field-label__line-height;
             vertical-align: top;
@@ -239,7 +225,7 @@
 
     .required > &, // ToDo UI: change classes 'required' to '_required'.
     ._required > & {
-        > label {
+        > span {
             &:after {
                 color: @validation__color;
                 content: '*';
@@ -249,12 +235,9 @@
                 line-height: 1;
                 margin-left: 10px;
                 margin-top: .2rem;
-                position: inherit;
+                position: absolute;
                 z-index: 1;
-                margin-left: -10px;
-                right: -17px;
-                top: 3px;
-
+                
             }
         }
     }
@@ -298,6 +281,14 @@
     legend {
         &.admin__field-label {
             opacity: 1;
+        }
+    }
+    
+    legend.admin__field-label{
+        span {
+            &:after {
+                display: none;
+            } 
         }
     }
 
@@ -530,7 +521,7 @@
                 position: absolute;
                 top: 0;
 
-                label {
+                span {
                     &:before {
                         display: block;
                     }
@@ -545,7 +536,7 @@
         }
 
         & > .admin__field-label {
-            label {
+            span {
                 &:before {
                     display: none;
                 }
