Fixed #18918 Removed Asterisk sign

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -210,7 +210,7 @@
         span {
             display: inline-block;
             line-height: @field-label__line-height;
-            vertical-align: top;
+            vertical-align: middle;
             white-space: normal;
 
             &[data-config-scope] {
