--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
@@ -274,9 +274,8 @@
                 transform: translateX(0);
                 visibility: visible;
                 z-index: @submenu__z-index;
-                overflow-x: scroll;
+                overflow-x: auto;
                 min-height: 98.65%;
-                left: 0;
                 position: absolute;
                 left: 100%;
                 min-width: 100%;
