MC-5518: Text Attribute
- added fixes for displaying all characters on product page

--- a/app/design/frontend/Magento/blank/Magento_Swatches/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Swatches/web/css/source/_module.less
@@ -124,7 +124,7 @@
             float: left;
             height: 20px;
             margin: 0 @indent__s @indent__xs 0;
-            max-width: 90px;
+            max-width: 100%;
             min-width: 30px;
             overflow: hidden;
             padding: 1px 2px;
@@ -279,7 +279,6 @@
                     .lib-css(color, @swatch-option-tooltip-title__color);
                     display: block;
                     max-height: 200px;
-                    max-width: 140px;
                     min-height: 20px;
                     overflow: hidden;
                     text-align: center;
