MC-5518: Text Attribute
- added new fixes for displaying all characters on product page

--- a/app/design/frontend/Magento/blank/Magento_Swatches/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Swatches/web/css/source/_module.less
@@ -279,7 +279,7 @@
                     .lib-css(color, @swatch-option-tooltip-title__color);
                     display: block;
                     max-height: 200px;
-                    max-width:140px
+                    max-width:140px;
                     min-height: 20px;
                     overflow: hidden;
                     text-align: center;
