Fix - Exibition of products on category page

--- a/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/module/_listings.less
@@ -202,7 +202,11 @@
                 padding-left: @indent__base;
             }
         }
-
+        .products-grid {
+            .product-item {
+                float: left;
+            }
+        }
     }
 
     .price-container {
