--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
@@ -174,6 +174,11 @@
                 padding-left: 0;
             }
         }
+        .products-grid {
+            .product-item {
+                float: left;
+            }
+        }
     }
 
     .price-container {
