--- a/app/code/Magento/Wishlist/view/frontend/templates/view.phtml
+++ b/app/code/Magento/Wishlist/view/frontend/templates/view.phtml
@@ -10,9 +10,7 @@
 ?>
 
 <?php if ($this->helper('Magento\Wishlist\Helper\Data')->isAllow()) : ?>
-    <?php if ($block->getPagerHtml()): ?>
-        <div class="toolbar"><?php echo $block->getPagerHtml(); ?></div>
-    <?php endif ?>
+    <div class="toolbar"><?php echo $block->getChildHtml('wishlist_item_pager'); ?></div>
     <?= ($block->getChildHtml('wishlist.rss.link')) ?>
     <form class="form-wishlist-items" id="wishlist-view-form"
           data-mage-init='{"wishlist":{
@@ -55,7 +53,5 @@
           <% } %>
       </form>
     </script>
-    <?php if ($block->getPagerHtml()): ?>
-        <div class="toolbar"><br><?php echo $block->getPagerHtml(); ?></div>
-    <?php endif ?>
+    <div class="toolbar"><br><?php echo $block->getChildHtml('wishlist_item_pager'); ?></div>
 <?php endif ?>
