--- a/app/design/frontend/Magento/luma/web/css/source/_extends.less
+++ b/app/design/frontend/Magento/luma/web/css/source/_extends.less
@@ -1503,8 +1503,8 @@
 
         .toolbar-amount,
         .limiter {
+            position: relative;
             z-index: 1;
-            display: inline-block;
         }
 
         .toolbar-amount {
@@ -1512,12 +1512,9 @@
             padding: 0;
         }
 
-        .limiter {
-            float: right;
-        }
-
         .pages {
-            display: inline-block;
+            position: absolute;
+            width: 100%;
             z-index: 0;
         }
     }
