--- a/app/design/frontend/Magento/blank/Magento_Wishlist/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Wishlist/web/css/source/_module.less
@@ -8,6 +8,23 @@
 //  _____________________________________________
 
 & when (@media-common = true) {
+    .toolbar {
+        &.wishlist-toolbar{
+            .limiter {
+                float: right;
+            }
+            .main .pages {
+                display: inline-block;
+                z-index: 0;
+                position: relative;
+            }
+            .toolbar-amount, .limiter {
+                z-index: 1;
+                display: inline-block;
+            }
+        }
+    }
+
     .form.wishlist.items {
         .actions-toolbar {
             &:extend(.abs-reset-left-margin all);
