--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_messages.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_messages.less
@@ -76,7 +76,7 @@
         position: absolute;
         speak: none;
         text-shadow: none;
-        top: 1.3rem;
+        top: 1.5rem;
         width: auto;
     }
 }
@@ -121,7 +121,7 @@
     }
 }
 
-#import_validation_container {
+.adminhtml-import-index {
     .message-success {
         &:before {
             color: @alert-icon__success__color;
