MAGETWO-90189: Grouped Products: Associated Products Can't Be Sorted Between Pages

--- a/app/code/Magento/GroupedProduct/view/adminhtml/web/template/components/position.html
+++ b/app/code/Magento/GroupedProduct/view/adminhtml/web/template/components/position.html
@@ -1,8 +1,7 @@
 <div class="position">
     <a href="#" class="move-top icon-backward icon-rearrange-position"
-       data-bind="
-            click: $parent.sendToTop.bind($parent)
-            ">
+       data-bind="click: $parent.sendToTop.bind($parent)"
+    >
         <span>Top</span>
     </a>
     <input type="text" class="position-widget-input"
