--- a/app/design/frontend/Magento/luma/Magento_GiftMessage/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_GiftMessage/web/css/source/_module.less
@@ -12,7 +12,7 @@
 @gift-item-block__border-color: @color-gray-light5;
 @gift-item-block__border-width: @border-width__base;
 
-@gift-item-block-title__color: @color-blue1;
+@gift-item-block-title__color: @link__color;
 @gift-item-block-title-icon__content: @icon-down;
 @gift-item-block-title-icon__active__content: @icon-up;
 @gift-item-block-title-icon__color: @color-gray52;
