--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/fields/_control-table.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/fields/_control-table.less
@@ -226,6 +226,11 @@
             margin: 0;
             padding: 0;
         }
+        div[data-index='selection_qty'] { 
+             .admin__field-control{
+              &:extend(.abs-field-size-small all);
+           }
+        }
     }
 }
 
