Solution for Add to cart ajax not working on Simple product page with custom option type - date

--- a/app/code/Magento/Catalog/view/frontend/templates/product/view/options/type/date.phtml
+++ b/app/code/Magento/Catalog/view/frontend/templates/product/view/options/type/date.phtml
@@ -49,7 +49,10 @@
                 "#product_addtocart_form": {
                     "validation": {
                         "ignore": ":hidden:not(input[name^='validate_datetime_'])"
-                    }
+                    },
+                "catalogAddToCart": {
+                    "bindSubmit": true
+                }
                 }
             }
         </script>
