Forword-port-18858: Left Side Back End Menu Design fix

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
@@ -270,9 +270,17 @@
 
         &._show {
             > .submenu {
+                display: block;
+                float: left;
+                left: 100%;
+                min-height: 98.65%;
+                min-width: 100%;
+                overflow-x: auto;
+                position: absolute;
                 transform: translateX(0);
                 visibility: visible;
                 z-index: @submenu__z-index;
+                max-width: 1440px;
             }
         }
     }
