--- a/app/code/Magento/Checkout/view/frontend/web/template/authentication.html
+++ b/app/code/Magento/Checkout/view/frontend/web/template/authentication.html
@@ -9,7 +9,7 @@
         type="button"
         class="action action-auth-toggle"
         data-trigger="authentication">
-        <span data-bind="i18n: 'Sign In'"></span>
+        <span data-bind="i18n: 'Login'"></span>
     </button>
     <div class="block-authentication"
          style="display: none"
@@ -34,7 +34,7 @@
                 <strong id="block-customer-login-heading"
                         role="heading"
                         aria-level="2"
-                        data-bind="i18n: 'Sign In'"></strong>
+                        data-bind="i18n: 'Login'"></strong>
             </div>
             <!-- ko foreach: getRegion('messages') -->
             <!-- ko template: getTemplate() --><!-- /ko -->
@@ -75,7 +75,7 @@
                     <div class="actions-toolbar">
                         <input name="context" type="hidden" value="checkout" />
                         <div class="primary">
-                            <button type="submit" class="action action-login secondary"><span data-bind="i18n: 'Sign In'"></span></button>
+                            <button type="submit" class="action action-login secondary"><span data-bind="i18n: 'Login'"></span></button>
                         </div>
                         <div class="secondary">
                             <a class="action action-remind" data-bind="attr: { href: forgotPasswordUrl }">
