Fixed Wrong Button style on wishlist page in buttons #19564

--- a/app/code/Magento/Wishlist/view/frontend/templates/button/tocart.phtml
+++ b/app/code/Magento/Wishlist/view/frontend/templates/button/tocart.phtml
@@ -10,7 +10,7 @@
 ?>
 
 <?php if ($block->getWishlist()->getItemsCount() && $block->getWishlist()->isSalable()): ?>
-    <button type="button" data-role="all-tocart" title="<?= $block->escapeHtmlAttr(__('Add All to Cart')) ?>" class="action tocart">
+    <button type="button" data-role="all-tocart" title="<?= $block->escapeHtmlAttr(__('Add All to Cart')) ?>" class="action tocart primary">
         <span><?= $block->escapeHtml(__('Add All to Cart')) ?></span>
     </button>
 <?php endif;?>
