--- a/app/code/Magento/Wishlist/view/frontend/templates/button/update.phtml
+++ b/app/code/Magento/Wishlist/view/frontend/templates/button/update.phtml
@@ -10,7 +10,7 @@
 ?>
 
 <?php if ($block->getWishlist()->getItemsCount()): ?>
-    <button type="submit" name="do" title="<?= $block->escapeHtmlAttr(__('Update Wish List')) ?>" class="action update">
+    <button type="submit" name="do" title="<?= $block->escapeHtmlAttr(__('Update Wish List')) ?>" class="action update primary">
         <span><?= $block->escapeHtml(__('Update Wish List')) ?></span>
     </button>
 <?php endif;?>
