changes for Wrong-Button-style-on-checkout-page-in-Sign-In-dropdown

--- a/app/code/Magento/Checkout/view/frontend/web/template/authentication.html
+++ b/app/code/Magento/Checkout/view/frontend/web/template/authentication.html
@@ -75,7 +75,7 @@
                     <div class="actions-toolbar">
                         <input name="context" type="hidden" value="checkout" />
                         <div class="primary">
-                            <button type="submit" class="action action-login secondary"><span data-bind="i18n: 'Sign In'"></span></button>
+                            <button type="submit" class="action action-login primary"><span data-bind="i18n: 'Sign In'"></span></button>
                         </div>
                         <div class="secondary">
                             <a class="action action-remind" data-bind="attr: { href: forgotPasswordUrl }">
