--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -149,7 +149,7 @@
         }
     }
     &.composite-bundle {
-        > .admin__field-control {
+        .admin__field-control {
             padding-top: 7px;
         }
         .admin__field-option {
