MAGETWO-96599: Backorder customer notification is not shown in Magento 2.2.0 / 2.1.9 on One page checkout #11708

--- a/app/code/Magento/Checkout/view/frontend/web/template/summary/item/details.html
+++ b/app/code/Magento/Checkout/view/frontend/web/template/summary/item/details.html
@@ -8,7 +8,7 @@
 <!-- ko foreach: getRegion('before_details') -->
     <!-- ko template: getTemplate() --><!-- /ko -->
 <!-- /ko -->
-<div class="product-item-details">
+<div class="product-item-details abs-add-clearfix">
 
     <div class="product-item-inner">
         <div class="product-item-name-block">
@@ -43,3 +43,6 @@
     </div>
     <!-- /ko -->
 </div>
+<!-- ko foreach: getRegion('item_message') -->
+    <!-- ko template: getTemplate() --><!-- /ko -->
+<!-- /ko -->
