--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_order-summary.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/checkout/_order-summary.less
@@ -166,6 +166,10 @@
                     }
                 }
             }
+
+            .message {
+                margin-top: 10px;
+            }
         }
 
         .actions-toolbar {
