[Fixed : Checkbox alignment issue #19576]

--- a/lib/web/css/source/lib/_forms.less
+++ b/lib/web/css/source/lib/_forms.less
@@ -300,6 +300,7 @@
 
     input[type="checkbox"] {
         .lib-form-element-choice(@_type: input-checkbox);
+        vertical-align: middle;
     }
 
     input[type="radio"] {
