magento/magento2:#19733 Modal content in admin area is under the close button

--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
@@ -130,6 +130,10 @@
         }
     }
 
+    .modal-content {
+        margin-top: @indent__m;
+    }
+
     .modal-footer {
         padding-top: @modal-slide__padding;
         text-align: right;
