Resolved contact form captcha issue

--- a/app/code/Magento/Contact/view/frontend/layout/contact_index_index.xml
+++ b/app/code/Magento/Contact/view/frontend/layout/contact_index_index.xml
@@ -13,6 +13,7 @@
         <referenceContainer name="content">
             <block class="Magento\Contact\Block\ContactForm" name="contactForm" template="Magento_Contact::form.phtml">
                 <container name="form.additional.info" label="Form Additional Info"/>
+                <block class="Magento\Captcha\Block\Captcha" name="captcha" after="-" />   
             </block>
         </referenceContainer>
     </body>
