Catalog category merchandiser product list missing move cursor in tile view

--- a/app/design/adminhtml/Magento/backend/Magento_VisualMerchandiser/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_VisualMerchandiser/web/css/source/_module.less
@@ -71,10 +71,12 @@
                 display: block;
                 float: left;
                 text-decoration: none;
+                cursor: move;
             }
 
             a:last-child {
                 float: right;
+                cursor: pointer;
             }
         }
 
