--- a/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
@@ -421,9 +421,9 @@ body._in-resize {
     }
 
     .data-grid-actions-cell {
-        padding-left: @data-grid-cell__padding-horizontal * 2;
-        padding-right: @data-grid-cell__padding-horizontal * 2;
-        text-align: center;
+        padding-left: @data-grid-cell__padding-horizontal;
+        padding-right: @data-grid-cell__padding-horizontal;
+        text-align: left;
         width: 1%;
     }
 
