--- a/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
@@ -6,6 +6,7 @@
         legend {
             &.admin__field-label {
                 opacity: 0;
+             }
         .admin__field {
             .admin__field-label {
                 background: none;
