--- a/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
@@ -2,16 +2,23 @@
 //  * Copyright © Magento, Inc. All rights reserved.
 //  * See COPYING.txt for license details.
 //  */
+
 .admin__field {
         legend {
             &.admin__field-label {
-                opacity: 0;
-             }
+                opacity: 1;
+            }
+        }
+}
+
+.customer_form_areas_address_address_customer_address_update_modal_update_customer_address_form_loader {
+    .admin__field {
         .admin__field {
             .admin__field-label {
                 background: none;
             }
         }
+    }
 }
 
 .customer-address-form {
